apps/forgero/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgero
spec:
  replicas: 1
  serviceName: forgero
  selector:
    matchLabels:
      app.kubernetes.io/name: forgero
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgero
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/part-of
                      operator: NotIn
                      values:
                        - nishir-platform
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: forgero
          image: forgero
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 22
              name: ssh
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 60
          startupProbe:
            httpGet:
              path: /api/healthz
              port: http
            failureThreshold: 30
          volumeMounts:
            - name: data
              mountPath: /data
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          secret:
            secretName: forgero-config
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data
