apps/forgero/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgero
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: forgero
---
apiVersion: v1
kind: Service
metadata:
  name: git
spec:
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
  selector:
    app.kubernetes.io/name: forgero
  type: LoadBalancer
