apps/forgero/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgero
spec:
  defaultBackend:
    service:
      name: forgero
      port:
        name: http
  tls:
    - hosts:
        - forgero
